--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -32,12 +32,16 @@
         <div class="panel-heading" style="padding: 0;">
           <!-- List Header -->
           <div class="list-header-block">
-            <!-- List Header Orta Block -->
+            <!-- List Header Left Block -->
             <div class="list-header-left-block">
               <span> Açıklama </span>
             </div>
+            <!-- List Header Left Block -->
             <!-- List Header Orta Block -->
-
+            <div class="list-header-left-block" style="margin-left: 370px">
+              <span> Düzenleme Tarihi </span>
+            </div>
+            <!-- List Header Orta Block -->
             <!-- List Header Right Block -->
             <div class="list-header-right-block">
               <span> <i class="fa fa-sort-numeric-desc"></i> Bakiye </span>
@@ -71,11 +75,6 @@
                       </div>
                       <!-- Gider Listele İsmi -->
                     </div>
-                    <!-- Gider Listele Orta Block -->
-                    <!--<div class="gider-listele-orta-block">-->
-
-                    <!--</div>-->
-                    <!-- Gider Listele Orta Block -->
                     <!-- Gider Listele Left Block -->
                     <!-- Gider Listele Right Block -->
                     <div class="gider-listele-right-block">
