--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -23,9 +23,88 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+  <!-- Gider Listele Table -->
+  <div class="row">
+    <div class="col-xs-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0;">
+          <div id="gider-listele-body-table">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <th class="gider-listele-table-baslik-text" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Açıklama</th>
+                  <th class="gider-listele-table-baslik-text">Düzenleme Tarihi</th>
+                  <th class="gider-listele-table-baslik-text gider-listele-right-baslik-text" style="padding-right: 20px;padding-bottom: 20px;padding-top: 20px"> <i class="fa fa-sort-numeric-desc"></i> Bakiye</th>
+                </thead>
+                <tbody>
+                <tr>
+                  <td>
+                    <a href="#">
+                      <div class="gider-listele-table-left-block">
+                        <div class="gider-listele-table-left-icon-block">
+                          <i class="fa fa-file" style="padding: 14px;background-color: #ddd;border-radius: 9px;font-size: 20px;color: #adadad;"></i>
+                        </div>
+                        <div class="gider-listele-table-aciklama-text">
+                          <span>Deneme Gider Açıklama</span>
+                        </div>
+                        <div class="gider-listele-table-kategori-block">
+                          <span>Araç Giderleri</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="#">
+                      <div class="gider-listele-table-middle-block">
+                        <div class="gider-listele-table-fatura-tarihi">
+                          <span>12 Ocak 2016</span>
+                          <span class="kalan-gun-text">( <i class="fa fa-bell"></i> 32 gün sonra )</span>
+                        </div>
+                        <div class="gider-listele-table-gider-turu-block">
+                          <span>Para Çıkışı</span>
+                        </div>
+                        <div class="gider-listele-table-gider-sube-block">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right;">
+                    <a href="#">
+                      <div class="gider-listele-table-right-block">
+                        <div class="gider-listele-table-kalan-meblag-block">
+                          <span>Kalan Meblağ : <b>90,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-table-genel-toplam-block">
+                          <span>Genel Toplam : <b>100,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-table-odeme-durumu-block">
+                          <span class="odenecek"><i class="fa fa-minus"></i> ÖDENECEK</span>
+                        </div>
+                        <!--<div class="gider-listele-table-odeme-durumu-block">-->
+                          <!--<span class="odendi"><i class="fa fa-check-circle"></i> ÖDENDİ</span>-->
+                        <!--</div>-->
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Gider Listele Table -->
+
   <div class="row">
     <!-- Gider Listele -->
-    <div class="col-md-12">
+    <div class="col-xs-12">
       <!-- Panel -->
       <div class="panel panel-light" style="border-radius: 5px">
         <!-- Panel Heading -->
