--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -32,6 +32,7 @@
         <div class="panel-body" style="padding: 0;">
           <div id="gider-listele-body-table">
             <div class="table-responsive">
+
               <table class="table">
                 <thead>
                   <th class="gider-listele-table-baslik-text" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Açıklama</th>
@@ -85,6 +86,108 @@
                         </div>
                         <!--<div class="gider-listele-table-odeme-durumu-block">-->
                           <!--<span class="odendi"><i class="fa fa-check-circle"></i> ÖDENDİ</span>-->
+                        <!--</div>-->
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="#">
+                      <div class="gider-listele-table-left-block">
+                        <div class="gider-listele-table-left-icon-block">
+                          <i class="fa fa-file" style="padding: 14px;background-color: #ddd;border-radius: 9px;font-size: 20px;color: #adadad;"></i>
+                        </div>
+                        <div class="gider-listele-table-aciklama-text">
+                          <span>Deneme Gider Açıklama</span>
+                        </div>
+                        <div class="gider-listele-table-kategori-block">
+                          <span>Araç Giderleri</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="#">
+                      <div class="gider-listele-table-middle-block">
+                        <div class="gider-listele-table-fatura-tarihi">
+                          <span>12 Ocak 2016</span>
+                          <span class="kalan-gun-text">( <i class="fa fa-bell"></i> 32 gün sonra )</span>
+                        </div>
+                        <div class="gider-listele-table-gider-turu-block">
+                          <span>Para Çıkışı</span>
+                        </div>
+                        <div class="gider-listele-table-gider-sube-block">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right;">
+                    <a href="#">
+                      <div class="gider-listele-table-right-block">
+                        <div class="gider-listele-table-kalan-meblag-block">
+                          <span>Kalan Meblağ : <b>90,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-table-genel-toplam-block">
+                          <span>Genel Toplam : <b>100,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-table-odeme-durumu-block">
+                          <span class="odenecek"><i class="fa fa-minus"></i> ÖDENECEK</span>
+                        </div>
+                        <!--<div class="gider-listele-table-odeme-durumu-block">-->
+                        <!--<span class="odendi"><i class="fa fa-check-circle"></i> ÖDENDİ</span>-->
+                        <!--</div>-->
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="#">
+                      <div class="gider-listele-table-left-block">
+                        <div class="gider-listele-table-left-icon-block">
+                          <i class="fa fa-file" style="padding: 14px;background-color: #ddd;border-radius: 9px;font-size: 20px;color: #adadad;"></i>
+                        </div>
+                        <div class="gider-listele-table-aciklama-text">
+                          <span>Deneme Gider Açıklama</span>
+                        </div>
+                        <div class="gider-listele-table-kategori-block">
+                          <span>Araç Giderleri</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="#">
+                      <div class="gider-listele-table-middle-block">
+                        <div class="gider-listele-table-fatura-tarihi">
+                          <span>12 Ocak 2016</span>
+                          <span class="kalan-gun-text">( <i class="fa fa-bell"></i> 32 gün sonra )</span>
+                        </div>
+                        <div class="gider-listele-table-gider-turu-block">
+                          <span>Para Çıkışı</span>
+                        </div>
+                        <div class="gider-listele-table-gider-sube-block">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right;">
+                    <a href="#">
+                      <div class="gider-listele-table-right-block">
+                        <div class="gider-listele-table-kalan-meblag-block">
+                          <span>Kalan Meblağ : <b>90,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-table-genel-toplam-block">
+                          <span>Genel Toplam : <b>100,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-table-odeme-durumu-block">
+                          <span class="odenecek"><i class="fa fa-minus"></i> ÖDENECEK</span>
+                        </div>
+                        <!--<div class="gider-listele-table-odeme-durumu-block">-->
+                        <!--<span class="odendi"><i class="fa fa-check-circle"></i> ÖDENDİ</span>-->
                         <!--</div>-->
                       </div>
                     </a>
