--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -41,7 +41,7 @@
                 </thead>
                 <tbody>
                 <tr>
-                  <td>
+                  <td class="first-table-cell">
                     <a href="#">
                       <div class="gider-listele-table-left-block">
                         <div class="gider-listele-table-left-icon-block">
@@ -92,7 +92,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>
+                  <td class="first-table-cell">
                     <a href="#">
                       <div class="gider-listele-table-left-block">
                         <div class="gider-listele-table-left-icon-block">
@@ -143,7 +143,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>
+                  <td class="first-table-cell">
                     <a href="#">
                       <div class="gider-listele-table-left-block">
                         <div class="gider-listele-table-left-icon-block">
