--- a/src/scss/List/list.scss
+++ b/src/scss/List/list.scss
@@ -324,7 +324,16 @@
 /* Gider Listele Body  Table */
 #gider-listele-body-table{
 
+  & .first-table-cell{
+    padding-left: 15px;
+  }
   & table tr{
+    & td{
+      padding: 0;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      min-width: 300px;
+    }
     &:hover{
       background: #f4f4f4;
     }
@@ -381,6 +390,7 @@
 
   & .gider-listele-table-right-block{
     float: right;
+    padding-right: 10px;
   }
   & .gider-listele-table-gider-turu-block{
     & span{
