list ekstra eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -23,6 +23,55 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+  <!-- Kategori List -->
+  <div class="row">
+    <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <!-- Kategori Listele Body -->
+          <div id="kategori-listele-body-block">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <th class="kategori-listele-table-head-text-first">Adi</th>
+                  <th class="kategori-listele-table-head-text">Adet Türü</th>
+                  <th class="kategori-listele-table-head-text">Kategori</th>
+                  <th class="kategori-listele-table-head-text-last" style="text-align: right">Fiyatı</th>
+                </thead>
+                <tbody>
+                <tr>
+                  <td class="kategori-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
+                  <td class="kategori-listele-table-body-text"><a href="#">Günlük</a></td>
+                  <td class="kategori-listele-table-body-text"><a href="#">Ekstralar</a></td>
+                  <td class="kategori-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
+                </tr>
+                <tr>
+                  <td class="kategori-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
+                  <td class="kategori-listele-table-body-text"><a href="#">Günlük</a></td>
+                  <td class="kategori-listele-table-body-text"><a href="#">Ekstralar</a></td>
+                  <td class="kategori-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
+                </tr>
+                <tr>
+                  <td class="kategori-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
+                  <td class="kategori-listele-table-body-text"><a href="#">Günlük</a></td>
+                  <td class="kategori-listele-table-body-text"><a href="#">Ekstralar</a></td>
+                  <td class="kategori-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <!-- Kategori Listele Body -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Kategori List -->
+
   <!-- Gider Listele Table -->
   <div class="row">
     <div class="col-xs-12">
