--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,8 @@
 /* List */
 @import "scss/List/list.scss";
 
+@import "scss/List/kategoriler.scss";
+
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
