kategori listeleme eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -23,6 +23,111 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+  <div class="row">
+    <div class="col-md-4">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Heading -->
+        <div class="panel-heading">
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span> Gider Kategorileri </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+          <!-- Panel Heading Right Block -->
+          <div class="panel-heading-right-block">
+            <a href="#" class="btn btn-success-ozel btn-xs"><i class="fa fa-plus"></i> Yeni </a>
+          </div>
+          <!-- Panel Right Block -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <!-- Kategori Listele -->
+          <div id="kategori-listele-body-block">
+            <ul class="kategori-listele-ul">
+              <li><a href="#">Maaş Giderleri</a></li>
+              <li><a href="#">Ofis Giderleri</a></li>
+              <li><a href="#">Mutfak Giderleri</a></li>
+              <li><a href="#">Temizlik Giderleri</a></li>
+            </ul>
+          </div>
+          <!-- Kategori Listele -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+
+    <div class="col-md-4">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Heading -->
+        <div class="panel-heading">
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span> Araç Gider Kategorileri </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+          <!-- Panel Heading Right Block -->
+          <div class="panel-heading-right-block">
+            <a href="#" class="btn btn-success-ozel btn-xs"><i class="fa fa-plus"></i> Yeni </a>
+          </div>
+          <!-- Panel Right Block -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <!-- Kategori Listele -->
+          <div id="kategori-listele-body-block">
+            <ul class="kategori-listele-ul">
+              <li><a href="#">Bakım</a></li>
+              <li><a href="#">Temizlik & Yıkama</a></li>
+              <li><a href="#">Yakıt</a></li>
+            </ul>
+          </div>
+          <!-- Kategori Listele -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+
+    <div class="col-md-4">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Heading -->
+        <div class="panel-heading">
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span> Hizmet Kategorileri </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+          <!-- Panel Heading Right Block -->
+          <div class="panel-heading-right-block">
+            <a href="#" class="btn btn-success-ozel btn-xs"><i class="fa fa-plus"></i> Yeni </a>
+          </div>
+          <!-- Panel Right Block -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <!-- Kategori Listele -->
+          <div id="kategori-listele-body-block">
+            <ul class="kategori-listele-ul">
+              <li><a href="#">Dahil Hizmetler</a></li>
+              <li><a href="#">Ekstralar</a></li>
+              <li><a href="#">Sigortalar</a></li>
+            </ul>
+          </div>
+          <!-- Kategori Listele -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+
   <!-- Kategori List -->
   <div class="row">
     <div class="col-md-12">
@@ -30,40 +135,34 @@
       <div class="panel panel-light" style="border-radius: 5px">
         <!-- Panel Body -->
         <div class="panel-body" style="padding: 0">
-          <!-- Kategori Listele Body -->
-          <div id="kategori-listele-body-block">
+          <!-- Hizmet Listele Body -->
+          <div id="hizmet-listele-body-block">
             <div class="table-responsive">
               <table class="table">
                 <thead>
-                  <th class="kategori-listele-table-head-text-first">Adi</th>
-                  <th class="kategori-listele-table-head-text">Adet Türü</th>
-                  <th class="kategori-listele-table-head-text">Kategori</th>
-                  <th class="kategori-listele-table-head-text-last" style="text-align: right">Fiyatı</th>
+                  <th class="hizmet-listele-table-head-text-first">Adi</th>
+                  <th class="hizmet-listele-table-head-text">Adet Türü</th>
+                  <th class="hizmet-listele-table-head-text">Kategori</th>
+                  <th class="hizmet-listele-table-head-text-last" style="text-align: right">Fiyatı</th>
                 </thead>
                 <tbody>
                 <tr>
-                  <td class="kategori-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
-                  <td class="kategori-listele-table-body-text"><a href="#">Günlük</a></td>
-                  <td class="kategori-listele-table-body-text"><a href="#">Ekstralar</a></td>
-                  <td class="kategori-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
+                  <td class="hizmet-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
+                  <td class="hizmet-listele-table-body-text"><a href="#">Günlük</a></td>
+                  <td class="hizmet-listele-table-body-text"><a href="#">Ekstralar</a></td>
+                  <td class="hizmet-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
                 </tr>
                 <tr>
-                  <td class="kategori-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
-                  <td class="kategori-listele-table-body-text"><a href="#">Günlük</a></td>
-                  <td class="kategori-listele-table-body-text"><a href="#">Ekstralar</a></td>
-                  <td class="kategori-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
-                </tr>
-                <tr>
-                  <td class="kategori-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
-                  <td class="kategori-listele-table-body-text"><a href="#">Günlük</a></td>
-                  <td class="kategori-listele-table-body-text"><a href="#">Ekstralar</a></td>
-                  <td class="kategori-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
+                  <td class="hizmet-listele-table-body-text-first"><a href="#">Bebek Koltuğu</a></td>
+                  <td class="hizmet-listele-table-body-text"><a href="#">Günlük</a></td>
+                  <td class="hizmet-listele-table-body-text"><a href="#">Ekstralar</a></td>
+                  <td class="hizmet-listele-table-body-text-last"><a href="#">7,50 <i class="fa fa-try"></i></a></td>
                 </tr>
                 </tbody>
               </table>
             </div>
           </div>
-          <!-- Kategori Listele Body -->
+          <!-- Hizmet Listele Body -->
         </div>
         <!-- Panel Body -->
       </div>
