--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -23,6 +23,151 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+
+  <!-- Şube Listele Table -->
+  <div class="row">
+    <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <div id="sube-listele-body-table">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <th class="sube-listele-table-head-text-first" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Şube Adı</th>
+                  <th class="sube-listele-table-head-text-last" style="padding-right: 20px;padding-bottom: 20px;padding-top: 20px;text-align:right"> <i class="fa fa-sort-numeric-desc"></i> Bakiye</th>
+                </thead>
+                <tbody>
+                <tr>
+                  <td>
+                    <div class="sube-listele-table-left-block">
+                      <div class="sube-listele-table-left-kisa-ad-block">
+                        <i class="fa fa-bank"></i>
+                      </div>
+                      <div class="sube-listele-table-left-tam-adi">
+                        <span>Ahmet Elçik</span>
+                        <span class="sube-listele-table-left-telefon-no">(554) 910 98 94</span>
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    10,00 try
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Şube Listele Table -->
+
+
+  <!-- Müşteri Listele Table -->
+  <div class="row">
+    <div class="col-xs-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0;">
+          <div id="musteri-listele-body-table">
+            <div class="table-responsive">
+
+              <table class="table">
+                <thead>
+                <th class="musteri-listele-table-head-text-first" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Adi</th>
+                <th class="musteri-listele-table-head-text-last" style="padding-right: 20px;padding-bottom: 20px;padding-top: 20px;text-align:right"> <i class="fa fa-sort-numeric-desc"></i> Bakiye</th>
+                </thead>
+                <tbody>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-left-block">
+                        <div class="musteri-listele-table-left-kisa-ad-block">
+                          <span>AE</span>
+                        </div>
+                        <div class="musteri-listele-table-left-tam-adi">
+                          <span>Ahmet Elçik</span>
+                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-right-block">
+                        <div class="musteri-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-left-block">
+                        <div class="musteri-listele-table-left-kisa-ad-block">
+                          <span>AE</span>
+                        </div>
+                        <div class="musteri-listele-table-left-tam-adi">
+                          <span>Ahmet Elçik</span>
+                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-right-block">
+                        <div class="musteri-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-left-block">
+                        <div class="musteri-listele-table-left-kisa-ad-block">
+                          <span>AE</span>
+                        </div>
+                        <div class="musteri-listele-table-left-tam-adi">
+                          <span>Ahmet Elçik</span>
+                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-right-block">
+                        <div class="musteri-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Müşteri Listele Table -->
+
   <div class="row">
     <div class="col-md-4">
       <!-- Panel -->
