araç listeleme table eklendi

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,9 @@
 /* Şube Listele */
 @import "scss/List/sube-listele.scss";
 
+/* Araç Listele */
+@import "scss/List/arac-listele.scss";
+
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
