--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -23,6 +23,78 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+  <!-- Araç Listele -->
+  <div class="row">
+    <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <div id="arac-listele-body-table-block">
+            <table class="table">
+              <thead>
+                <th class="arac-listele-table-head-text-first">Araç</th>
+                <th class="arac-listele-table-head-text-last" style="text-align: right">Konumu</th>
+              </thead>
+              <tbody>
+              <tr>
+                <td class="first-table-cell">
+                  <a href="#">
+                    <div class="arac-listele-table-left-block">
+                      <div class="arac-listele-table-left-icon-block">
+                        <i class="fa fa-car"></i>
+                      </div>
+                      <div class="arac-listele-table-left-arac-marka-full">
+                        <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
+                        <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
+                      </div>
+                    </div>
+                  </a>
+                </td>
+                <td style="text-align: right" class="last-table-cell">
+                  <a href="#">
+                    <div class="arac-listele-table-right-block">
+                      <div class="sube-listele-table-right-bakiye-text">
+                        <span>Denizli Merkez Şube</span>
+                      </div>
+                    </div>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td class="first-table-cell">
+                  <a href="#">
+                    <div class="arac-listele-table-left-block">
+                      <div class="arac-listele-table-left-icon-block">
+                        <i class="fa fa-car"></i>
+                      </div>
+                      <div class="arac-listele-table-left-arac-marka-full">
+                        <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
+                        <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
+                      </div>
+                    </div>
+                  </a>
+                </td>
+                <td style="text-align: right" class="last-table-cell">
+                  <a href="#">
+                    <div class="arac-listele-table-right-block">
+                      <div class="sube-listele-table-right-bakiye-text">
+                        <span>Denizli Merkez Şube</span>
+                      </div>
+                    </div>
+                  </a>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Araç Listele -->
 
   <!-- Şube Listele Table -->
   <div class="row">
@@ -40,19 +112,63 @@
                 </thead>
                 <tbody>
                 <tr>
-                  <td>
-                    <div class="sube-listele-table-left-block">
-                      <div class="sube-listele-table-left-kisa-ad-block">
-                        <i class="fa fa-bank"></i>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="sube-listele-table-left-block">
+                        <div class="sube-listele-table-sube-adi-block">
+                          <span>Denizli Merkez Şube</span>
+                        </div>
                       </div>
-                      <div class="sube-listele-table-left-tam-adi">
-                        <span>Ahmet Elçik</span>
-                        <span class="sube-listele-table-left-telefon-no">(554) 910 98 94</span>
-                      </div>
-                    </div>
+                    </a>
                   </td>
-                  <td>
-                    10,00 try
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="sube-listele-table-right-block">
+                        <div class="sube-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#" >
+                      <div class="sube-listele-table-left-block">
+                        <div class="sube-listele-table-sube-adi-block">
+                          <span>Denizli Merkez Şube</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#" >
+                      <div class="sube-listele-table-right-block">
+                        <div class="sube-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="sube-listele-table-left-block">
+                        <div class="sube-listele-table-sube-adi-block">
+                          <span>Denizli Merkez Şube</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="sube-listele-table-right-block">
+                        <div class="sube-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
                   </td>
                 </tr>
                 </tbody>
