araç listeleme tablosu için responsive classı eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -31,62 +31,64 @@
         <!-- Panel Body -->
         <div class="panel-body" style="padding: 0">
           <div id="arac-listele-body-table-block">
-            <table class="table">
-              <thead>
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
                 <th class="arac-listele-table-head-text-first">Araç</th>
                 <th class="arac-listele-table-head-text-last" style="text-align: right">Konumu</th>
-              </thead>
-              <tbody>
-              <tr>
-                <td class="first-table-cell">
-                  <a href="#">
-                    <div class="arac-listele-table-left-block">
-                      <div class="arac-listele-table-left-icon-block">
-                        <i class="fa fa-car"></i>
+                </thead>
+                <tbody>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-left-block">
+                        <div class="arac-listele-table-left-icon-block">
+                          <i class="fa fa-car"></i>
+                        </div>
+                        <div class="arac-listele-table-left-arac-marka-full">
+                          <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
+                          <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
+                        </div>
                       </div>
-                      <div class="arac-listele-table-left-arac-marka-full">
-                        <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
-                        <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-right-block">
+                        <div class="sube-listele-table-right-bakiye-text">
+                          <span>Denizli Merkez Şube</span>
+                        </div>
                       </div>
-                    </div>
-                  </a>
-                </td>
-                <td style="text-align: right" class="last-table-cell">
-                  <a href="#">
-                    <div class="arac-listele-table-right-block">
-                      <div class="sube-listele-table-right-bakiye-text">
-                        <span>Denizli Merkez Şube</span>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-left-block">
+                        <div class="arac-listele-table-left-icon-block">
+                          <i class="fa fa-car"></i>
+                        </div>
+                        <div class="arac-listele-table-left-arac-marka-full">
+                          <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
+                          <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
+                        </div>
                       </div>
-                    </div>
-                  </a>
-                </td>
-              </tr>
-              <tr>
-                <td class="first-table-cell">
-                  <a href="#">
-                    <div class="arac-listele-table-left-block">
-                      <div class="arac-listele-table-left-icon-block">
-                        <i class="fa fa-car"></i>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-right-block">
+                        <div class="sube-listele-table-right-bakiye-text">
+                          <span>Denizli Merkez Şube</span>
+                        </div>
                       </div>
-                      <div class="arac-listele-table-left-arac-marka-full">
-                        <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
-                        <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
-                      </div>
-                    </div>
-                  </a>
-                </td>
-                <td style="text-align: right" class="last-table-cell">
-                  <a href="#">
-                    <div class="arac-listele-table-right-block">
-                      <div class="sube-listele-table-right-bakiye-text">
-                        <span>Denizli Merkez Şube</span>
-                      </div>
-                    </div>
-                  </a>
-                </td>
-              </tr>
-              </tbody>
-            </table>
+                    </a>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
         <!-- Panel Body -->
