arac listeleme durum iconu koyuldu

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -44,6 +44,7 @@
                       <div class="arac-listele-table-left-block">
                         <div class="arac-listele-table-left-icon-block">
                           <i class="fa fa-car"></i>
+                          <i class="fa fa-circle arac-listele-table-left-icon-durumu"></i>
                         </div>
                         <div class="arac-listele-table-left-arac-marka-full">
                           <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
