arac listeme css edit

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -44,7 +44,7 @@
                       <div class="arac-listele-table-left-block">
                         <div class="arac-listele-table-left-icon-block">
                           <i class="fa fa-car"></i>
-                          <i class="fa fa-circle arac-listele-table-left-icon-durumu"></i>
+                          <i class="fa fa-circle arac-listele-table-left-icon-durumu arac-durumu-succes"></i>
                         </div>
                         <div class="arac-listele-table-left-arac-marka-full">
                           <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
@@ -56,7 +56,7 @@
                   <td style="text-align: right" class="last-table-cell">
                     <a href="#">
                       <div class="arac-listele-table-right-block">
-                        <div class="sube-listele-table-right-bakiye-text">
+                        <div class="arac-listele-table-right-konum-text">
                           <span>Denizli Merkez Şube</span>
                         </div>
                       </div>
@@ -69,6 +69,7 @@
                       <div class="arac-listele-table-left-block">
                         <div class="arac-listele-table-left-icon-block">
                           <i class="fa fa-car"></i>
+                          <i class="fa fa-circle arac-listele-table-left-icon-durumu arac-durumu-red"></i>
                         </div>
                         <div class="arac-listele-table-left-arac-marka-full">
                           <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
@@ -80,7 +81,7 @@
                   <td style="text-align: right" class="last-table-cell">
                     <a href="#">
                       <div class="arac-listele-table-right-block">
-                        <div class="sube-listele-table-right-bakiye-text">
+                        <div class="arac-listele-table-right-konum-text">
                           <span>Denizli Merkez Şube</span>
                         </div>
                       </div>
