--- a/src/scss/List/arac-listele.scss
+++ b/src/scss/List/arac-listele.scss
@@ -46,7 +46,7 @@
     line-height: 50px;
     & span{
       color: #888888;
-      font-size: 14px!important;
+      font-size: 14px;
     }
   }
 
