--- a/src/scss/List/arac-listele.scss
+++ b/src/scss/List/arac-listele.scss
@@ -3,6 +3,7 @@
     & tr{
       & td{
         padding: 0;
+        border-bottom: 1px solid #f5f5f5;
       }
       & a{
         text-decoration: none;
