--- a/src/scss/List/list.scss
+++ b/src/scss/List/list.scss
@@ -333,6 +333,7 @@
       padding-top: 10px;
       padding-bottom: 10px;
       min-width: 300px;
+      border-bottom: 1px solid #f5f5f5;
     }
     &:hover{
       background: #f4f4f4;
