--- a/src/scss/List/musteri-listele.scss
+++ b/src/scss/List/musteri-listele.scss
@@ -2,6 +2,7 @@
   & table{
     & tr{
       & td{
+        border-bottom: 1px solid #f5f5f5;
         padding: 0;
         padding-top: 10px;
         padding-bottom: 10px;
