kiralama listeleme list eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -23,6 +23,13 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+  <!-- Kiralama Listele -->
+  <div class="row">
+    <div class="col-md-12">
+
+    </div>
+  </div>
+  <!-- Kiralama Listele -->
   <!-- Araç Listele -->
   <div class="row">
     <div class="col-md-12">
