kiralama listele table edit

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -26,7 +26,44 @@
   <!-- Kiralama Listele -->
   <div class="row">
     <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0;">
+          <div id="kiralama-listele-table-body-block">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <th class="kiralama-listele-table-head-text-first">Araç Bilgisi</th>
+                  <th class="kiralama-listele-table-head-text">Gidiş & Dönüş Bilgisi</th>
+                  <th class="kiralama-listele-table-head-text-last" style="text-align: right">Bakiye</th>
+                </thead>
+                <tbody>
+                <tr>
+                  <td>
+                    <div class="kiralama-listele-table-left-block">
 
+                    </div>
+                  </td>
+                  <td>
+                    <div class="kiralama-listele-table-middle-block">
+
+                    </div>
+                  </td>
+                  <td>
+                    <div class="kiralama-listele-table-right-block">
+
+                    </div>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
     </div>
   </div>
   <!-- Kiralama Listele -->
