--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,9 @@
 /* Araç Listele */
 @import "scss/List/arac-listele.scss";
 
+/* Kiralama Listele */
+@import "scss/List/kiralama-listele.scss";
+
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
