arac marka adi eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -42,7 +42,12 @@
                 <tr>
                   <td>
                     <div class="kiralama-listele-table-left-block">
-
+                      <div class="kiralama-listele-table-left-icon-block">
+                        <i class="fa fa-car"></i>
+                      </div>
+                      <div class="kiralama-listele-table-left-arac-marka-adi">
+                        <span>Bmw 3 Serisi ( 35 D 8897 )</span>
+                      </div>
                     </div>
                   </td>
                   <td>
