icon block css edit

--- a/src/scss/List/kiralama-listele.scss
+++ b/src/scss/List/kiralama-listele.scss
@@ -39,6 +39,7 @@
 
   & .kiralama-listele-table-left-icon-block{
     display: inline-block;
+    float: left;
     & i{
       background-color: #dddddd;
       padding: 13px;
