kiralama list musteri adi css edit

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -48,6 +48,11 @@
                       <div class="kiralama-listele-table-left-arac-marka-adi">
                         <span>Bmw 3 Serisi ( 35 D 8897 )</span>
                       </div>
+                      <div class="kiralama-listele-table-left-musteri-adi">
+                        <span>
+                          Ahmet Elçik
+                        </span>
+                      </div>
                     </div>
                   </td>
                   <td>
