--- a/src/scss/List/kiralama-listele.scss
+++ b/src/scss/List/kiralama-listele.scss
@@ -52,6 +52,7 @@
 
   & .kiralama-listele-table-left-arac-marka-adi{
     display: inline-block;
+    line-height: 25px;
     & span{
       color: #888;
       font-weight: 100;
